objects/ASI_NPP_Calculation_Base__c.object
<CustomObject>
    <fields>
        <fullName>ASI_NPP_BB__c</fullName>
        <label>BB /9LC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Benchmark_CAAP__c</fullName>
        <label>Benchmark - CAAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Benchmark_CM__c</fullName>
        <label>Benchmark- CM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Distribution__c</fullName>
        <label>Distribution /L</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_FASTAR__c</fullName>
        <label>FASTAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Handling__c</fullName>
        <label>Handling/L</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Channel</fullName>
                </value>
                <value>
                    <fullName>Cambodia Duty Paid</fullName>
                </value>
                <value>
                    <fullName>Philippine Duty Free</fullName>
                </value>
                <value>
                    <fullName>Philippine Duty Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Prompt_Payment_Discount__c</fullName>
        <label>Prompt Payment Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>ASI_NPP_Calculation_Bases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PnL Base</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_Fiscal_Year__c</columns>
        <columns>ASI_NPP_Sub_brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_NPP_BB__c</columns>
        <columns>ASI_NPP_Benchmark_CAAP__c</columns>
        <columns>ASI_NPP_Benchmark_CM__c</columns>
        <columns>ASI_NPP_Distribution__c</columns>
        <columns>ASI_NPP_FASTAR__c</columns>
        <columns>ASI_NPP_Handling__c</columns>
        <columns>ASI_NPP_Prompt_Payment_Discount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>FY1718</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_Fiscal_Year__c</columns>
        <columns>ASI_NPP_Sub_brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_NPP_Benchmark_CAAP__c</columns>
        <columns>ASI_NPP_Benchmark_CM__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_NPP_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1718</value>
        </filters>
        <label>FY1718</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>FY1718_SG</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_Fiscal_Year__c</columns>
        <columns>ASI_NPP_Market__c</columns>
        <columns>ASI_NPP_Sub_brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_NPP_Benchmark_CAAP__c</columns>
        <columns>ASI_NPP_Benchmark_CM__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_NPP_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1718</value>
        </filters>
        <filters>
            <field>ASI_NPP_Market__c</field>
            <operation>equals</operation>
            <value>Singapore</value>
        </filters>
        <label>FY1718 - SG</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>NPP-{000000}</displayFormat>
        <label>ASI NPP Calculation Base Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PnL Base</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPP_SG_Calculation_Base</fullName>
        <active>true</active>
        <label>SG Calculation Base</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>